# algos_kurs

./: .gitignore  CMakeLists.txt  for_tree.txt  main.cpp
cpp/classes/: Client.cpp  HashTable.cpp  SimCard.cpp  Validator.cpp
cpp/structures/: ClientAVL.cpp  List.cpp  SimCardHash.cpp
headers/: SimCard.h  Sim_cards_operations.h
headers/classes/: Client.h  HashTable.h  SimCard.h  Validator.h
headers/structures/: ClientAVL.h  List.h  SimCardHash.h
